--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 
 key=AIzaSyB7Xj5gvaopzLyEwWQxVhuQ2JMQBS4qmHE
-
+CLOUDINARY_CLOUD_NAME=dvczexomi
+CLOUDINARY_API_KEY=464818896545618
+CLOUDINARY_API_SECRET=NgfPN1_seimfHDRUpiApbReFa8A
